Viewport Render Preview glitching with Eevee Render Engine #89405
Closed
opened 2021-06-24 07:33:00 +02:00 by Juan
·
26 comments
No Branch/Tag Specified
main
blender-v3.6-release
temp-sculpt-dyntopo-hive-alloc
temp-sculpt-dyntopo
tmp-usd-python-mtl
asset-browser-frontend-split
node-group-operators
brush-assets-project
asset-shelf
blender-v2.93-release
blender-v3.3-release
universal-scene-description
temp-sculpt-attr-api
blender-v3.5-release
realtime-clock
sculpt-dev
gpencil-next
bevelv2
microfacet_hair
blender-projects-basics
principled-v2
v3.3.7
v2.93.18
v3.5.1
v3.3.6
v2.93.17
v3.5.0
v2.93.16
v3.3.5
v3.3.4
v2.93.15
v2.93.14
v3.3.3
v2.93.13
v2.93.12
v3.4.1
v3.3.2
v3.4.0
v3.3.1
v2.93.11
v3.3.0
v3.2.2
v2.93.10
v3.2.1
v3.2.0
v2.83.20
v2.93.9
v3.1.2
v3.1.1
v3.1.0
v2.83.19
v2.93.8
v3.0.1
v2.93.7
v3.0.0
v2.93.6
v2.93.5
v2.83.18
v2.93.4
v2.93.3
v2.83.17
v2.93.2
v2.93.1
v2.83.16
v2.93.0
v2.83.15
v2.83.14
v2.83.13
v2.92.0
v2.83.12
v2.91.2
v2.83.10
v2.91.0
v2.83.9
v2.83.8
v2.83.7
v2.90.1
v2.83.6.1
v2.83.6
v2.90.0
v2.83.5
v2.83.4
v2.83.3
v2.83.2
v2.83.1
v2.83
v2.82a
v2.82
v2.81a
v2.81
v2.80
v2.80-rc3
v2.80-rc2
v2.80-rc1
v2.79b
v2.79a
v2.79
v2.79-rc2
v2.79-rc1
v2.78c
v2.78b
v2.78a
v2.78
v2.78-rc2
v2.78-rc1
v2.77a
v2.77
v2.77-rc2
v2.77-rc1
v2.76b
v2.76a
v2.76
v2.76-rc3
v2.76-rc2
v2.76-rc1
v2.75a
v2.75
v2.75-rc2
v2.75-rc1
v2.74
v2.74-rc4
v2.74-rc3
v2.74-rc2
v2.74-rc1
v2.73a
v2.73
v2.73-rc1
v2.72b
2.72b
v2.72a
v2.72
v2.72-rc1
v2.71
v2.71-rc2
v2.71-rc1
v2.70a
v2.70
v2.70-rc2
v2.70-rc
v2.69
v2.68a
v2.68
v2.67b
v2.67a
v2.67
v2.66a
v2.66
v2.65a
v2.65
v2.64a
v2.64
v2.63a
v2.63
v2.61
v2.60a
v2.60
v2.59
v2.58a
v2.58
v2.57b
v2.57a
v2.57
v2.56a
v2.56
v2.55
v2.54
v2.53
v2.52
v2.51
v2.50
v2.49b
v2.49a
v2.49
v2.48a
v2.48
v2.47
v2.46
v2.45
v2.44
v2.43
v2.42a
v2.42
v2.41
v2.40
v2.37a
v2.37
v2.36
v2.35a
v2.35
v2.34
v2.33a
v2.33
v2.32
v2.31a
v2.31
v2.30
v2.28c
v2.28a
v2.28
v2.27
v2.26
v2.25
Labels
Clear labels
Issues relating to security: https://wiki.blender.org/wiki/Process/Vulnerability_Reports
Apply labels
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Issues relating to security: https://wiki.blender.org/wiki/Process/Vulnerability_Reports
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
Milestone
Set milestone
Clear milestone
No items
No Milestone
Projects
Set Project
Clear projects
No project
Assignees
Assign users
Clear assignees
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#89405
Reference in New Issue
There is no content yet.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may exist for a short time before cleaning up, in most cases it CANNOT be undone. Continue?
System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: Radeon RX 560X ATI Technologies Inc. 4.5.14830 Core Profile Context 21.4.1 27.20.21002.112
Blender Version
Broken: version: 2.93.1, branch: master, commit date: 2021-06-22 05:57, hash:
1b8d33b18c
Short description of error
When I change from Viewport Solid Mode to Viewport Render Preview, I see a weird glitchy, multicolored dots, thing, and when I orbit the shape of the object becomes invisible, and the weird glitch dots move inside the invisible shape. Both Workbench and Cycles work perfectly as expected. I have already tried downgrading my Radeon drivers from 21.5.2 to 21.4.1 and the result is the same.
Exact steps for others to reproduce the error
Glitchy_Eevee_Viewport_Renderpreview.blend
{F10192388, size=full}
{F10192399, size=full}
Added subscriber: @Daydreamingbackagain
#89404 was marked as duplicate of this issue
Added subscribers: @Jeroen-Bakker, @PratikPB2123
After the AMD driver update (not sure but 21.4 onwards) , Eevee render engine has such glitches.
You can temporary fix this with
Render Properties -> Performance -> High Quality Normals
.may be @Jeroen-Bakker can help you.
Added subscribers: @nader, @iss
Can't reproduce on Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.5.14831 Core Profile Context 21.5.1 27.20.21003.1028
If setting the high quality normals fixes the issue I will be glad to add the workaround for this card and push the fix to 2.83 and 2.93. But first would need confirmation from @Daydreamingbackagain
Changed status from 'Needs Triage' to: 'Confirmed'
Changed status from 'Confirmed' to: 'Needs User Info'
oops, wrong action.
@Jeroen-Bakker , I translated the @nader 's comment from the task
#89404
. He said issue is fixed for him after settinghigh quality normals
to trueAdded subscriber: @ankitm
#82856 (After updating the video card drivers to 20.11.2, interface artifacts appeared.)
@PratikPB2123 Those are two different generations. Blacklisting a card needs to be done on the actual GPU name.
Will assign this ticket to me and plat to enable the workaround next week.
Hey, thank you so much! High Quality Normals worked and now Eevee render engine works. I feel like I should add that today I went into the Shading workspace and selected Viewport Material Preview Mode and Cycles doesn't work there either, changing it back to Render Preview fixes cycles again, or "High Quality Normals". Cheers! @Jeroen-Bakker @PratikPB2123
Changed status from 'Needs User Info' to: 'Confirmed'
Thanks for checking
Changed status from 'Confirmed' to: 'Needs User Info'
The RX 560X was already blacklisted. So it is a bit strange that manually setting up the workaround seems like to fix it from the user.
Is it possible to upload the system info generated from blender help menu perhaps it is not an exact match with our logic.
As the user also reports that this is an eevee only issue it seems like it isn't the hq normals that would fix this as these glitches also happen in workbench.
Hi, what does it mean if my graphics card is blacklisted? Shouldn't it work? And I see that this was updated to "Needs information from user" what exactly do you need and how to get it and I'll upload/check/verify etc...
Open Blender -> Help -> Save System Info
, save the generated file then attach it here (simply drag and drop)system-info.txt
and about my graphics card being blacklisted? Does that mean I won't get future updates or something like that?
@Daydreamingbackagain Hi sorry for the confusion. I used the term blacklist before, but it is actually a whitelist
There are many different GPU/drivers/platform configuration that we support. With whitelisting a specific GPU will be enabled with a specific work-around to solve a known issue inside the driver.
Ah thanks for the info. I see the issue and we can add the card to the whitelist. Thanks!
This issue was referenced by
2c7efe5ac0
This issue was referenced by
2262d6c45a
Changed status from 'Needs User Info' to: 'Resolved'
This issue was referenced by
c5c4727d6e